--- a/example-notebook_R.ipynb
+++ b/example-notebook_R.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "# Kernel density plots for mpg\n",
     "# grouped by number of gears (indicated by color)\n",
-    "qplot(mpg, data=mtcars, geom=\"density\", fill=\"blue\", alpha=I(.5), \n",
+    "qplot(mpg, data=mtcars, geom=\"density\", fill=gear, alpha=I(.5), \n",
     "   main=\"Distribution of Gas Milage\", xlab=\"Miles Per Gallon\", \n",
     "   ylab=\"Density\"\n",
     ")\n",
